# browser-heap-analyzer

./: Cargo.toml  README.md
src/: main.rs
