[package]
name = "heap-analyzer"
version = "0.1.0"
edition = "2021"
description = "Extract LLM-friendly summaries from Chrome .heapsnapshot files"

[[bin]]
name = "heap-analyzer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }

[profile.release]
opt-level = 3
lto = true
